--- a/portfoilo/Main/index.html
+++ b/portfoilo/Main/index.html
@@ -33,7 +33,7 @@
 
   <div class="list">
       <div class ="two">
-          <img class = "me" src ="./imgs/me.jpg" alt="" width="450px;" height="500px">
+          <img class = "me" src ="./imgs/me.png" alt="" width="450px;" height="500px">
           <h3 class ="intext"> <strong>What would I lose if I learn coding?<br>Absoultely nothing!</strong><br><br>
             Hello! I'm Shu. Welcome to my homepage.<br>
             I want to major in Coding. <br>
